updating comments in ipynb file

--- a/spam_filter.ipynb
+++ b/spam_filter.ipynb
@@ -951,9 +951,10 @@
     "# Creating the spam filter \n",
     "def classify(message): # The input variable message is assumed to be a string\n",
     "\n",
-    "    message = re.sub('\\W', ' ', message) # Removing the punctuation\n",
-    "    message = message.lower() # Bringing all letters to lower case\n",
-    "    message = message.split() # Splitting the string at the space character and transforming it into a Python list\n",
+    "    # Cleansing string\n",
+    "    message = re.sub('\\W', ' ', message) \n",
+    "    message = message.lower() \n",
+    "    message = message.split() \n",
     "\n",
     "    p_spam_given_message_without_p_message = p_spam # Missing the factor of the probability of the message because it is impossible to compute  \n",
     "    p_ham_given_message_without_p_message = p_ham # Missing the factor of the probability of the message because it is impossible to compute\n",
@@ -1184,7 +1185,9 @@
    "id": "44b99479-246e-42c1-afac-87ef0a40db36",
    "metadata": {},
    "source": [
-    "The accuracy of our spam filter is close to 89%, which is a good result not for production, but only for such an easy method as the Naive Bayes. As for production, our model accuracy could definitely score better. The spam filter looked at 1,114 messages that it hasn't seen in training, and classified 989 correctly. One of the ways to improve the accuracy of our algorithm is to figure out why the algorithm reached 125 wrong conclusions. We will do this by isolating the 125 messages which were classified incorrectly. "
+    "The accuracy of our spam filter is close to 89%. This is a good result for using an easy method like the Naive Baysed. However, it is not good enough for production. Indeed, the model accuracy could definitely score better. \n",
+    "\n",
+    "The spam filter looked at 1,114 messages that it hasn't seen in training, and classified 989 correctly. We should figure out why the algorithm reached 125 wrong conclusions. Let's isolate the 125 messages to explore them further. "
    ]
   },
   {
@@ -1316,6 +1319,7 @@
     }
    ],
    "source": [
+    "# Exploring wrongly labelled messages\n",
     "incorrect_values = test_set.loc[(test_set['label'] != test_set['predicted'])]\n",
     "incorrect_values"
    ]
@@ -1325,7 +1329,7 @@
    "id": "a785b814-7756-476f-bd72-c29518604222",
    "metadata": {},
    "source": [
-    "Of the 125 incorrect predictions, 124 were wrongly predicted as spam. This might be because some of the messages include capitalised sentences, exclamation marks, and keywords such as 'Congrats'. These might have misled the program in assuming that those were spam messages, though they simply were ham messages. A solution to this problem could be to make the filter process more complex by training the algorithm to be more sensitive to letter case, punctuations, and keywords. In this way, the program's accuracy can be improved. "
+    "Of the 125 incorrect predictions, 124 were wrongly predicted as spam. This might be because some of the messages include capitalised sentences, exclamation marks, and keywords such as 'Congrats'. These might have misled the program in assuming that those were spam messages, but they were ham. A solution could be to train the algorithm to be more sensitive to letter case, punctuations, and keywords. In this way, the program's accuracy can be improved. "
    ]
   },
   {
