adding ipynb file

--- a/spam_filter.ipynb
+++ b/spam_filter.ipynb
@@ -958,17 +958,23 @@
     "\n",
     "    p_spam_given_message_without_p_message = p_spam # Missing the factor of the probability of the message because it is impossible to compute  \n",
     "    p_ham_given_message_without_p_message = p_ham # Missing the factor of the probability of the message because it is impossible to compute\n",
-    "    \n",
-    "    for word in message: # Multiplying the already known probability of spam/ ham messages by the probability of a word being in a spam/ ham message \n",
-    "        if word in vocabulary: # checking if the word is in the vocabulary because we computed the probabilities for only words in the vocabulary \n",
+    "\n",
+    "    # Multiplying the already known probability of spam/ ham messages by the probability of a word being in a spam/ ham message\n",
+    "    for word in message:  \n",
+    "\n",
+    "        # checking if the word is in the vocabulary because we computed the probabilities for only words in the vocabulary\n",
+    "        if word in vocabulary:  \n",
     "            p_spam_given_message_without_p_message *= spam_dict[word]\n",
     "            p_ham_given_message_without_p_message *= ham_dict[word]\n",
-    "        else: # if the word does not appear in the vocabulary, we assume that it has equal probabilities of appearing in both sets (spam and ham)\n",
+    "\n",
+    "        # if the word does not appear in the vocabulary, we assume that it has equal probabilities of appearing in both sets (spam and ham)\n",
+    "        else: \n",
     "            p_spam_given_message_without_p_message *= 0.5 \n",
     "            p_ham_given_message_without_p_message *= 0.5\n",
     "        \n",
     "    print('P(Spam|message) * P(message):', p_spam_given_message_without_p_message)\n",
     "    print('P(Ham|message) * P(message):', p_ham_given_message_without_p_message)\n",
+    "    \n",
     "    # Canceling out the p_message and finding the ratio between prob. of spam given message and prob. of ham given message \n",
     "    ratio_spam_given_message_to_ham_given_message = p_spam_given_message_without_p_message / p_ham_given_message_without_p_message \n",
     "    if ratio_spam_given_message_to_ham_given_message > 1: # Comparing the two values \n",
