editing code cells in ipynb file

--- a/spam_filter.ipynb
+++ b/spam_filter.ipynb
@@ -46,7 +46,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/qs/fdrj_gks73v_3fn5zbpyl2000000gn/T/ipykernel_73728/2936574059.py:3: DeprecationWarning: \n",
+      "/var/folders/qs/fdrj_gks73v_3fn5zbpyl2000000gn/T/ipykernel_74394/2936574059.py:3: DeprecationWarning: \n",
       "Pyarrow will become a required dependency of pandas in the next major release of pandas (pandas 3.0),\n",
       "(to allow more performant data types, such as the Arrow string type, and better interoperability with other libraries)\n",
       "but was not found to be installed on your system.\n",
@@ -401,27 +401,27 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>fullonsms.com</th>\n",
-       "      <th>pokkiri</th>\n",
-       "      <th>hell</th>\n",
-       "      <th>age16</th>\n",
-       "      <th>07753741225</th>\n",
-       "      <th>you*</th>\n",
-       "      <th>!1</th>\n",
-       "      <th>talk</th>\n",
-       "      <th>tears</th>\n",
-       "      <th>£900</th>\n",
+       "      <th>already...</th>\n",
+       "      <th>tones</th>\n",
+       "      <th>08718727868.</th>\n",
+       "      <th>things?</th>\n",
+       "      <th>85233</th>\n",
+       "      <th>babe..</th>\n",
+       "      <th>significant</th>\n",
+       "      <th>there</th>\n",
+       "      <th>canal.</th>\n",
+       "      <th>bye</th>\n",
        "      <th>...</th>\n",
-       "      <th>monday...</th>\n",
-       "      <th>strewn</th>\n",
-       "      <th>crack</th>\n",
-       "      <th>ms</th>\n",
-       "      <th>grown</th>\n",
-       "      <th>97n7qp,</th>\n",
-       "      <th>singles</th>\n",
-       "      <th>texted.</th>\n",
-       "      <th>kerala</th>\n",
-       "      <th>truck</th>\n",
+       "      <th>mb...</th>\n",
+       "      <th>howda</th>\n",
+       "      <th>cloud</th>\n",
+       "      <th>g2</th>\n",
+       "      <th>\"get</th>\n",
+       "      <th>spark.</th>\n",
+       "      <th>trash.</th>\n",
+       "      <th>sutra</th>\n",
+       "      <th>ego</th>\n",
+       "      <th>q</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -551,26 +551,26 @@
        "</div>"
       ],
       "text/plain": [
-       "   fullonsms.com  pokkiri  hell  age16  07753741225  you*  !1  talk  tears  \\\n",
-       "0              0        0     0      0            0     0   0     0      0   \n",
-       "1              0        0     0      0            0     0   0     0      0   \n",
-       "2              0        0     0      0            0     0   0     0      0   \n",
-       "3              0        0     0      0            0     0   0     0      0   \n",
-       "4              0        0     0      0            0     0   0     0      0   \n",
+       "   already...  tones  08718727868.  things?  85233  babe..  significant  \\\n",
+       "0           0      0             0        0      0       0            0   \n",
+       "1           0      0             0        0      0       0            0   \n",
+       "2           0      0             0        0      0       0            0   \n",
+       "3           0      0             0        0      0       0            0   \n",
+       "4           0      0             0        0      0       0            0   \n",
        "\n",
-       "   £900  ...  monday...  strewn  crack  ms  grown  97n7qp,  singles  texted.  \\\n",
-       "0     0  ...          0       0      0   0      0        0        0        0   \n",
-       "1     0  ...          0       0      0   0      0        0        0        0   \n",
-       "2     0  ...          0       0      0   0      0        0        0        0   \n",
-       "3     0  ...          0       0      0   0      0        0        0        0   \n",
-       "4     0  ...          0       0      0   0      0        0        0        0   \n",
+       "   there  canal.  bye  ...  mb...  howda  cloud  g2  \"get  spark.  trash.  \\\n",
+       "0      0       0    0  ...      0      0      0   0     0       0       0   \n",
+       "1      0       0    0  ...      0      0      0   0     0       0       0   \n",
+       "2      0       0    0  ...      0      0      0   0     0       0       0   \n",
+       "3      0       0    0  ...      0      0      0   0     0       0       0   \n",
+       "4      0       0    0  ...      0      0      0   0     0       0       0   \n",
        "\n",
-       "   kerala  truck  \n",
-       "0       0      0  \n",
-       "1       0      0  \n",
-       "2       0      0  \n",
-       "3       0      0  \n",
-       "4       0      0  \n",
+       "   sutra  ego  q  \n",
+       "0      0    0  0  \n",
+       "1      0    0  0  \n",
+       "2      0    0  0  \n",
+       "3      0    0  0  \n",
+       "4      0    0  0  \n",
        "\n",
        "[5 rows x 11846 columns]"
       ]
@@ -615,25 +615,25 @@
        "      <th></th>\n",
        "      <th>SMS</th>\n",
        "      <th>label</th>\n",
-       "      <th>fullonsms.com</th>\n",
-       "      <th>pokkiri</th>\n",
-       "      <th>hell</th>\n",
-       "      <th>age16</th>\n",
-       "      <th>07753741225</th>\n",
-       "      <th>you*</th>\n",
-       "      <th>!1</th>\n",
-       "      <th>talk</th>\n",
+       "      <th>already...</th>\n",
+       "      <th>tones</th>\n",
+       "      <th>08718727868.</th>\n",
+       "      <th>things?</th>\n",
+       "      <th>85233</th>\n",
+       "      <th>babe..</th>\n",
+       "      <th>significant</th>\n",
+       "      <th>there</th>\n",
        "      <th>...</th>\n",
-       "      <th>monday...</th>\n",
-       "      <th>strewn</th>\n",
-       "      <th>crack</th>\n",
-       "      <th>ms</th>\n",
-       "      <th>grown</th>\n",
-       "      <th>97n7qp,</th>\n",
-       "      <th>singles</th>\n",
-       "      <th>texted.</th>\n",
-       "      <th>kerala</th>\n",
-       "      <th>truck</th>\n",
+       "      <th>mb...</th>\n",
+       "      <th>howda</th>\n",
+       "      <th>cloud</th>\n",
+       "      <th>g2</th>\n",
+       "      <th>\"get</th>\n",
+       "      <th>spark.</th>\n",
+       "      <th>trash.</th>\n",
+       "      <th>sutra</th>\n",
+       "      <th>ego</th>\n",
+       "      <th>q</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -763,26 +763,26 @@
        "</div>"
       ],
       "text/plain": [
-       "                                                 SMS label  fullonsms.com  \\\n",
-       "0  [aight, text, me, when, you're, back, at, mu, ...   ham              0   \n",
-       "1  [our, prashanthettan's, mother, passed, away, ...   ham              0   \n",
-       "2  [no, it, will, reach, by, 9, only., she, telli...   ham              0   \n",
-       "3                [do, you, know, when, the, result.]   ham              0   \n",
-       "4  [hi., customer, loyalty, offer:the, new, nokia...  spam              0   \n",
+       "                                                 SMS label  already...  tones  \\\n",
+       "0  [aight, text, me, when, you're, back, at, mu, ...   ham           0      0   \n",
+       "1  [our, prashanthettan's, mother, passed, away, ...   ham           0      0   \n",
+       "2  [no, it, will, reach, by, 9, only., she, telli...   ham           0      0   \n",
+       "3                [do, you, know, when, the, result.]   ham           0      0   \n",
+       "4  [hi., customer, loyalty, offer:the, new, nokia...  spam           0      0   \n",
        "\n",
-       "   pokkiri  hell  age16  07753741225  you*  !1  talk  ...  monday...  strewn  \\\n",
-       "0        0     0      0            0     0   0     0  ...          0       0   \n",
-       "1        0     0      0            0     0   0     0  ...          0       0   \n",
-       "2        0     0      0            0     0   0     0  ...          0       0   \n",
-       "3        0     0      0            0     0   0     0  ...          0       0   \n",
-       "4        0     0      0            0     0   0     0  ...          0       0   \n",
+       "   08718727868.  things?  85233  babe..  significant  there  ...  mb...  \\\n",
+       "0             0        0      0       0            0      0  ...      0   \n",
+       "1             0        0      0       0            0      0  ...      0   \n",
+       "2             0        0      0       0            0      0  ...      0   \n",
+       "3             0        0      0       0            0      0  ...      0   \n",
+       "4             0        0      0       0            0      0  ...      0   \n",
        "\n",
-       "   crack  ms  grown  97n7qp,  singles  texted.  kerala  truck  \n",
-       "0      0   0      0        0        0        0       0      0  \n",
-       "1      0   0      0        0        0        0       0      0  \n",
-       "2      0   0      0        0        0        0       0      0  \n",
-       "3      0   0      0        0        0        0       0      0  \n",
-       "4      0   0      0        0        0        0       0      0  \n",
+       "   howda  cloud  g2  \"get  spark.  trash.  sutra  ego  q  \n",
+       "0      0      0   0     0       0       0      0    0  0  \n",
+       "1      0      0   0     0       0       0      0    0  0  \n",
+       "2      0      0   0     0       0       0      0    0  0  \n",
+       "3      0      0   0     0       0       0      0    0  0  \n",
+       "4      0      0   0     0       0       0      0    0  0  \n",
        "\n",
        "[5 rows x 11848 columns]"
       ]
@@ -949,36 +949,40 @@
    "outputs": [],
    "source": [
     "# Creating the spam filter \n",
-    "def classify(message): # The input variable message is assumed to be a string\n",
+    "def classify(message): \n",
     "\n",
     "    # Cleansing string\n",
     "    message = re.sub('\\W', ' ', message) \n",
     "    message = message.lower() \n",
     "    message = message.split() \n",
     "\n",
-    "    p_spam_given_message_without_p_message = p_spam # Missing the factor of the probability of the message because it is impossible to compute  \n",
-    "    p_ham_given_message_without_p_message = p_ham # Missing the factor of the probability of the message because it is impossible to compute\n",
+    "    # The factor of the probability of the message is missing because it's impossible to compute  \n",
+    "    p_spam_given_message_without_p_message = p_spam \n",
+    "    p_ham_given_message_without_p_message = p_ham \n",
     "\n",
     "    # Multiplying the already known probability of spam/ ham messages by the probability of a word being in a spam/ ham message\n",
     "    for word in message:  \n",
     "\n",
-    "        # checking if the word is in the vocabulary because we computed the probabilities for only words in the vocabulary\n",
+    "        # Checking if the word is in the vocabulary because we computed the probabilities for only words in the vocabulary\n",
     "        if word in vocabulary:  \n",
     "            p_spam_given_message_without_p_message *= spam_dict[word]\n",
     "            p_ham_given_message_without_p_message *= ham_dict[word]\n",
     "\n",
-    "        # if the word does not appear in the vocabulary, we assume that it has equal probabilities of appearing in both sets (spam and ham)\n",
+    "        # If the word does not appear in the vocabulary, we assume that it has equal probabilities of appearing in both sets (spam and ham)\n",
     "        else: \n",
     "            p_spam_given_message_without_p_message *= 0.5 \n",
     "            p_ham_given_message_without_p_message *= 0.5\n",
-    "        \n",
+    "\n",
+    "    # Printing spam and ham messages probability \n",
     "    print('P(Spam|message) * P(message):', p_spam_given_message_without_p_message)\n",
     "    print('P(Ham|message) * P(message):', p_ham_given_message_without_p_message)\n",
     "    \n",
     "    # Canceling out the p_message and finding the ratio between prob. of spam given message and prob. of ham given message \n",
     "    ratio_spam_given_message_to_ham_given_message = p_spam_given_message_without_p_message / p_ham_given_message_without_p_message \n",
-    "    if ratio_spam_given_message_to_ham_given_message > 1: # Comparing the two values \n",
-    "        print('Label: Spam') # Printing classification labels \n",
+    "    \n",
+    "    # Comparing the two values\n",
+    "    if ratio_spam_given_message_to_ham_given_message > 1:  \n",
+    "        print('Label: Spam') \n",
     "    elif ratio_spam_given_message_to_ham_given_message < 1:\n",
     "        print('Label: Ham')\n",
     "    else:\n",
@@ -987,10 +991,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "id": "e6b02e6e-a146-4dcd-804d-0280c70c070f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "P(Spam|message) * P(message): 3.89221926303302e-49\n",
+      "P(Ham|message) * P(message): 1.0062794601200843e-53\n",
+      "Label: Spam\n",
+      "\n",
+      "\n",
+      "P(Spam|message) * P(message): 2.3429206327971535e-43\n",
+      "P(Ham|message) * P(message): 1.772601594524923e-41\n",
+      "Label: Ham\n"
+     ]
+    }
+   ],
    "source": [
     "# Testing our function \n",
     "test_1 = \"WINNER!! This is the secret code to unlock the money: C3421\" # using a message that is obviously spam \n",
@@ -1011,7 +1030,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "id": "c6b3d5c6-b119-49ba-9159-39473adfa6a2",
    "metadata": {},
    "outputs": [],
@@ -1052,7 +1071,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "id": "73c98a48-b755-4454-b4ba-b0979b743f59",
    "metadata": {},
    "outputs": [
@@ -1060,7 +1079,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/qs/fdrj_gks73v_3fn5zbpyl2000000gn/T/ipykernel_73728/986431654.py:26: RuntimeWarning: invalid value encountered in scalar divide\n",
+      "/var/folders/qs/fdrj_gks73v_3fn5zbpyl2000000gn/T/ipykernel_74394/986431654.py:26: RuntimeWarning: invalid value encountered in scalar divide\n",
       "  ratio_spam_given_message_to_ham_given_message = p_spam_given_message_without_p_message / p_ham_given_message_without_p_message\n"
      ]
     },
@@ -1134,7 +1153,7 @@
        "4                         Oh k...i'm watching here:)   ham       ham"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1157,7 +1176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "id": "475c8a9a-52fb-413c-a6c6-1b4fef7be8b1",
    "metadata": {},
    "outputs": [
@@ -1198,7 +1217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
    "id": "dc351083-df9f-4db9-a4df-9f2149ddf297",
    "metadata": {
     "tags": []
@@ -1319,7 +1338,7 @@
        "[179 rows x 3 columns]"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
